[package]
name = "microdelay"
version = "0.1.1"
repository = "https://github.com/aciddm3/micro_delay_vst3"
edition = "2024"

[workspace]
members = [
	"xtask",
]

[lib]
crate-type = ["cdylib"] # Создает динамическую библиотеку (DLL/SO/DYLIB)

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256
lto = false
panic = "unwind"
strip = "none"

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false

[dependencies]
egui = "0.33.3"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", features = ["vst3"] }
nih_plug_derive = { git = "https://github.com/robbert-vdh/nih-plug" } 
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
